--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,16 @@
 body {
-    background-color: skyblue;
+    background-color: #eeeeee;
+}
+.navHome-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+.navHome-container ul {
+    display: flex;
+}
+.navHome-container li{
+    margin: 15px ;
+    cursor: pointer;
+    list-style: none;
 }
