Affichage panier prix

--- a/templates/admin/ajouterProduits.html.twig
+++ b/templates/admin/ajouterProduits.html.twig
@@ -54,9 +54,13 @@
                     {{ form_row(produitsForm.quantite) }}
                 </div>
                 
-                <div class='rowFormLast'>
-                    {{ form_row(produitsForm.laCategorie) }}
+                <div class='rowForm'>
+                    {{ form_row(produitsForm.description) }}
                 </div>
+                
+                {# <div class='rowFormLast'>
+                    {{ form_row(produitsForm.laCategorie) }}
+                </div> #}
 
                 <button type="submit" class="btn btn-success w-100 mb-5">Ajouter</button>
 
