--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -1,20 +1,76 @@
-{% extends 'base.html.twig' %}
+{# {% extends 'base.html.twig' %} #}
 
-{% block title %}Hello AdminController!{% endblock %}
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <title>{% block title %}Welcome!{% endblock %}</title>
+        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
+        <link rel="stylesheet" href="/assets/styles/app.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    </head>
+    <style>
+        * {
+            padding: 0;
+            margin: 0;
+            box-sizing: border-box;
+        }
+        .homePage-container {
+            height: 100vh;
+            background-color: #f5f5f5;
+        }
+        .navBar-container{
+            width: 100%;
+            background-color: #2d9fe5;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 20px 100px;
+        }
+        .navBar-container ul {
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+        }
+        .navBar-container ul li {
+            padding: 0 30px;
+            list-style: none;
+        }
+        .navBar-container ul li:hover {
+            cursor: pointer;
+        }
+    </style>
+    <body>
+        <div class='homePage-container'>
+            <div class='navBar-container'>
+                <button type="button" class="btn btn-outline-info">
+                    <a href="{{ path('app_login') }}">Login</a>
+                </button>
+            </div>
+            <h1 class="text-center my-4">Connecté en tant que {{ app.user.userIdentifier }} </h1>
+            <button type="button " class="btn btn-outline-success">
+                <a href="{{ path('app_home') }}">Home page</a>
+            </button>
+            <div class='Creation-produits d-flex p-5'>
+                <p class="px-3">Ajouter un produit </p>
+                <button type="button " class="btn btn-outline-success">
+                    <a href="{{ path('app_admin_dashboard_ajouter_produits') }}">Produits</a>
+                </button>
+            </div>
+            <div class='Creation-categories d-flex p-5'>
+                <p class="px-3">Ajouter une catégorie </p>
+                <button type="button " class="btn btn-outline-success">
+                    <a href="{{ path('app_admin_dashboard_ajouter_categories') }}">Catégories</a>
+                </button>
+            </div>
+        </div> 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    </body>
+</html>
 
-{% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>C:/wamp64/www/apdrive2/apdrive/src/Controller/AdminController.php</code></li>
-        <li>Your template at <code>C:/wamp64/www/apdrive2/apdrive/templates/admin/index.html.twig</code></li>
-    </ul>
-</div>
-{% endblock %}
+        {# {% block user %}
+            {% if app.user %}
+                <p>utilisateur connecté</p>
+            {% else %}
+                <p>l'utilisateur n'est pas connecté</p>
+            {% endif %}  
+        {% endblock %} #}
