--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -1,9 +1,10 @@
-{# {% extends 'base.html.twig' %} #}
+{% extends 'base.html.twig' %}
 
+{% block body %}
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}Admin Page{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
         <link rel="stylesheet" href="/assets/styles/app.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -14,7 +15,7 @@
             margin: 0;
             box-sizing: border-box;
         }
-        .homePage-container {
+        .homePage-Admin {
             height: 100vh;
             background-color: #f5f5f5;
         }
@@ -38,39 +39,51 @@
         .navBar-container ul li:hover {
             cursor: pointer;
         }
+        .homePage-Admin .homePage-container .links {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .homePage-Admin .homePage-container .links button, .navBar-container button {
+            border-radius: 15px;
+            text-decoration: none;
+            padding: 10px 20px;
+            border: 2px solid black;
+            margin: 15px;
+        }
+        .homePage-Admin .homePage-container .links button a, .navBar-container button a {
+            background: none;
+            color: black;
+        }
+        
     </style>
     <body>
-        <div class='homePage-container'>
+        <div class='homePage-Admin'>
             <div class='navBar-container'>
-                <button type="button" class="btn btn-outline-info">
+                <button type="button">
                     <a href="{{ path('app_login') }}">Login</a>
                 </button>
+                <h1 class="">Connecté en tant que {{ app.user.userIdentifier }} </h1>
             </div>
-            <h1 class="text-center my-4">Connecté en tant que {{ app.user.userIdentifier }} </h1>
-            <button type="button " class="btn btn-outline-success">
-                <a href="{{ path('app_home') }}">Home page</a>
-            </button>
-            <div class='Creation-produits d-flex p-5'>
-                <p class="px-3">Ajouter un produit </p>
-                <button type="button " class="btn btn-outline-success">
-                    <a href="{{ path('app_admin_dashboard_ajouter_produits') }}">Produits</a>
-                </button>
-            </div>
-            <div class='Creation-categories d-flex p-5'>
-                <p class="px-3">Ajouter une catégorie </p>
-                <button type="button " class="btn btn-outline-success">
-                    <a href="{{ path('app_admin_dashboard_ajouter_categories') }}">Catégories</a>
-                </button>
+            <div class='homePage-container'>
+                <div class="links">
+                    <button type="button">
+                        <a href="{{ path('app_home') }}">Home page</a>
+                    </button>
+                    
+                    <button type="button">
+                        <a href="{{ path('app_admin_dashboard_ajouter_produits') }}">Ajouter produits</a>
+                    </button>
+
+                    <button type="button">
+                        <a href="{{ path('app_admin_dashboard_ajouter_categories') }}">Ajouter catégories</a>
+                    </button>
+                </div>
+
+                <div id="Product-app"></div>
             </div>
         </div> 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </body>
 </html>
-
-        {# {% block user %}
-            {% if app.user %}
-                <p>utilisateur connecté</p>
-            {% else %}
-                <p>l'utilisateur n'est pas connecté</p>
-            {% endif %}  
-        {% endblock %} #}
+{% endblock %}
