validation panier & vueJs

--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -72,14 +72,14 @@
                     </button>
                     
                     <button type="button">
-                        <a href="{{ path('app_admin_dashboard_ajouter_produits') }}">Ajouter produits</a>
+                        <a href="{{ path('app_admin_ajouter_produits') }}">Ajouter produits</a>
                     </button>
 
                     <button type="button">
-                        <a href="{{ path('app_admin_dashboard_ajouter_categories') }}">Ajouter catégories</a>
+                        <a href="{{ path('app_admin_ajouter_categories') }}">Ajouter catégories</a>
                     </button>
                 </div>
-
+                <div id="Product-app"></div>
                 <div id="Product-app"></div>
             </div>
         </div> 
