--- a/templates/admin/commandes.html.twig
+++ b/templates/admin/commandes.html.twig
@@ -1,5 +1,5 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <div id="Admin-app"></div>
+    <div id="Commandes-app"></div>
 {% endblock %}
