--- a/templates/registration/index.html.twig
+++ b/templates/registration/index.html.twig
@@ -1,46 +1,85 @@
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
-        <link rel="stylesheet" href="/assets/styles/app.css">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    </head>
-    <body>
+{% extends 'base.html.twig' %}
+
+{% block title %}Inscription{% endblock %}
+
+{% block body %}
+<div class="register-container">
+    <h1>Inscription</h1>
+
+    {{ form_errors(registrationForm) }}
+
+    {{ form_start(registrationForm, {'attr': {'class': 'register-form'}}) }}
+        {{ form_row(registrationForm.email) }}
+        {{ form_row(registrationForm.nom) }}
+        {{ form_row(registrationForm.prenom) }}
+        {{ form_row(registrationForm.plainPassword, {
+            label: 'Mot de passe'
+        }) }}
+        {{ form_row(registrationForm.agreeTerms, {
+            'label': 'J\'accepte les termes et conditions'
+        }) }}
+
+        <button type="submit" class="btn">S'inscrire</button>
+    {{ form_end(registrationForm) }}
+</div>
+{% endblock %}
+
+{% block stylesheets %}
+    {{ parent() }}
     <style>
-        .rowForm {
-            padding: 4px;
+        .register-container {
+            max-width: 400px;
+            margin: 50px auto;
+            padding: 20px;
+            background: #fff;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+        }
+
+        .register-container h1 {
+            text-align: center;
+            color: #34495e;
+            margin-bottom: 1.5rem;
+        }
+
+        .register-form label {
+            margin-bottom: 0.5rem;
+            font-weight: bold;
+            color: #34495e;
+        }
+
+        .register-form input {
+            margin-bottom: 1rem;
+            padding: 0.5rem;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            width: 100%;
+        }
+
+        .register-form .form-control:focus {
+            border-color: #1abc9c;
+            box-shadow: 0 0 5px rgba(26, 188, 156, 0.5);
+        }
+
+        .register-form .btn {
+            background-color: #1abc9c;
+            color: white;
+            border: none;
+            padding: 0.5rem 1rem;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+            width: 100%;
+        }
+
+        .register-form .btn:hover {
+            background-color: #16a085;
+        }
+
+        .checkbox {
+            display: flex;
+            align-items: center;
+            justify-content: left;
         }
     </style>
-    {% block body %}
-    <div class="mx-auto" style="width: 400px;">
-    <h1 class="text-center h3 mt-5 mb-3 font-weight-normal">Enregistrez-vous !</h1>
-    
-    {{ form_errors(registrationForm) }}
-    <div class='rowForm'>
-    {{ form_start(registrationForm) }}
-        <div class='rowForm'>
-            {{ form_row(registrationForm.prenom) }}
-        </div>
-        <div class='rowForm'>
-            {{ form_row(registrationForm.nom) }}
-        </div>
-        <div class='rowForm'>
-            {{ form_row(registrationForm.email) }}
-        </div>
-        <div class='rowForm'>
-            {{ form_row(registrationForm.plainPassword, {
-                label: 'Password'
-            }) }}
-        </div>
-        <div class='rowForm'>
-            {{ form_row(registrationForm.agreeTerms) }}
-        </div>
-        <button type="submit" class="btn btn-success w-100 mb-5">S'enregistrer</button>
-    {{ form_end(registrationForm) }}
-    </div>
-    {% endblock %}
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    </body>
-</html>
+{% endblock %}
