afficher commande + chemin

--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -76,10 +76,12 @@
                     </button>
 
                     <button type="button">
-                        <a href="{{ path('app_admin_ajouter_categories') }}">Ajouter catégories</a>
+                        <a href="{{ path('app_admin_afficher_commandes') }}">afficher commandes</a>
                     </button>
+
                 </div>
-                <div id="Product-app"></div>
+                <div>
+                </div>
                 <div id="Product-app"></div>
             </div>
         </div> 
