--- a/templates/home/cheminCommande.html.twig
+++ b/templates/home/cheminCommande.html.twig
@@ -26,7 +26,7 @@
             Distance Totale : {{ distanceTotale }} unités
         </div>
 
-        <a href="/" class="btn-back">Retour à l'accueil</a>
+        <a href="/admin/commande" class="btn-back">Retour à l'accueil</a>
     </body>
 
     <style scoped>
